<resources>
    <string name="app_name">Dental Care</string>
    <string name="about"> \nOur office has become our patient’s dental “home”.
       \n Our patients are made to feel welcome and comfortable with each visit.
        \nOur comprehensive care philosophy is to maintain and provide our dental family with the finest and most personalized dental care available.
        \nWe are dedicated to providing top quality service and satisfaction at all times.
        \nOur success is measured by our patient’s willingness to recommend our dental care to their friends and family.
    \nOur services cover the full range of family dental services, from pediatric dental care to root canals, implants, crowns, bridges, all types of fillings, tooth whitening and Invisalign, to mention a few.  We also provide sedation dentistry for those who desire it.
\n
Our extended hours are provided to accommodate the schedules of shift workers and students, as well as professionals in the private service field.
\n
It’s our hope that you will find the dental procedures and oral care methods discussed on our website, helpful and enlightening.
\n
We have several locations in Hamilton to serve our dental ‘family’. Please feel free to give us a call if you have questions or would like to schedule an appointment.

    </string>
    <string name="philosophy">Our first and most important concern is you and your smile. Our motto goes this way: “We will give you something to smile about”. That is why we have put together a group of professionals, using state-of-the art equipment to make your visit feel like you have a wining team on your side. Grover Dental Care is ‘home’ to our patients and we welcome you</string>
    <string name="standards">are based on the “best practices” available in dentistry today. That gives us the edge we need, to provide the care you deserve. Treatment planning for every aspect of your dental program is a joint effort, between you and our dental team. From your first visit through every stage of your dental care, our ultimate goal is to see that you enjoy optimal oral health.</string>
    <string name="safety">is uncompromising. We maintain strict sterilization and contamination processes to protect our family of patients. We use standards that are recommended by the Royal College of Dental Surgeons (RCDSO), the Center for Disease Control (CDC) and the Occupational Safety and Health Administration (OSHA).</string>
    <string name="wisdom">Commonly known as third molars; wisdom teeth are the last teeth to emerge and tend to come through between the ages of 17 and 25. For some people they erupt without any problems – the same as all other teeth, but for others they can create a range of oral and general health concerns which in turn need often be extracted.</string>
<string name="gum_disease">Early prevention is advantageous as advanced bone loss resulting from periodontal disease is usually irreversible; your gums and jawbone are the foundations for your teeth.
\n
Correct oral hygiene should be taught in the home from a young age, this includes proper brushing and flossing techniques, having a healthy diet and attending regular dental check-ups to ensure that your teeth last a lifetime.
\n
Following a simple daily oral hygiene routine of brushing at least twice a day and flossing once a day will significantly improve your dental and overall health.
\n
The effectiveness of this routine is important so that you can avoid extensive dental treatments in the future.</string>
    <string name="knocked">If the knocked out tooth is dirty, hold it by the crown (not roots) and rinse it in milk. If milk is not available then use water but only for a few seconds or have patient suck it clean, then put the tooth back in the socket. If the tooth cannot be replanted, wrap in Glad Wrap or place it in milk or in the patient’s mouth inside the cheek. It is essential to see us within 30 minutes if you can as timing is critical for successful replanting.</string>
<string name="xrays">Various forms of x-rays enable your Coral Dental dentist to obtain important information, which is then used in planning your treatment. They show the condition of your teeth, roots, jaw placement and the overall composition of your facial structure.

They are invaluable for diagnosing the presence of gum disease, abscesses and any abnormal growths, including cysts and tumours. They are vital in the early detection of cavities and assist in determining other signs of disease not able to be seen during a visual exam.

 </string>
    <string name="brush">The accumulation of food particles on your tongue and between your teeth not removed during your daily oral cleaning, react with bacteria and cause bad breath. Some people battle with constant bad breath, using mints, mouthwash and gum, which only mask the problem and not cure it.

Adopting an effective at home oral hygiene routine and scheduling professional cleaning appointments to remove plaque and tartar build-up every six – twelve months, depending on your current state of oral health, can restore your mouth to full health and make your breath fresh.

In some cases, persistent bad breath can indicate you have a more serious health problem, including a gastrointestinal, respiratory or sinus problem. In this instance we advise that you consult with your GP.</string>
 <string name="headache">A headache can be an inconvenience easily relieved with an everyday headache tablet and often there is little thought as to its cause, with many people putting it down to strained neck or shoulder muscles from a bad night’s sleep or a sport strain. For some people this may be true, but very few would think their teeth and jaw might be the cause of their headache.

So when something goes wrong with your jaw joints, it can cause you much discomfort. With the right diagnosis and treatment by Coral Dental’s dedicated team, most people find relief from the pain and other symptoms of a TMJ disorder.

 </string>
    <string name="diabetes">Recent studies have also indicated a correlation between gum disease and an increased risk of stroke, heart attack and type II diabetes. It is believed this is due to the toxins from gum disease entering the bloodstream and adhering to the sticky plaque and fatty deposits on artery walls, constricting or preventing blood flow.
\n
This is due to the bacterium from gum disease entering the bloodstream through microscopic cuts in the gums made from brushing and flossing too vigorously, this bacterium then adheres to plaque in the artery walls restricting blood flow, contributing to a heart attack or stroke.</string>
    <string name="ftime">
        \nAt AKVS Dental, we want your children to have the best dental health possible. Visits to a dentist by children as young as 2 years of age, is important in order to detect any problems in growth and oral health as soon as possible. Early visits also gets them used to having their teeth checked, relieving any problems of visits as they get older.</string>
  <string name="desc1">Everybody has undoubtedly heard the popular saying,  Prevention is better than cure.  This phrase is applicable more than ever in dentistry because the longer dental problems go unaddressed, the treatments can become exponentially expensive — and painful. Many people put off seeing a dentist until an oral health problem becomes too agonizing to ignore, necessitating extensive and costly treatments. Luckily for you, modern dentistry has many solutions to make sure that today s minor irritation does not turn into tomorrow s major agony.
\n
Preventive dentistry can help arrest tooth decay or other diseases in the earlier stages. The goal is to keep your teeth as healthy as possible and maintain your natural teeth for life.
\n
Visiting AKVS Dental Clinic every six months for a check-up and cleaning can help prevent these problems from occurring in the first place. If you develop an issue with your teeth or gums, regular checkups ensure that our team can treat and also, in some cases, reverse your problems with conservative measures. The time and efforts you put into maintaining your oral health is an investment that will reap great rewards for your future health.
\n\n
Preventive Dentistry Procedures:
\n
AKVS Dental Clinic offers you these common dental treatments which are carried out as a form of oral preventive procedures. In other words, these procedures are designed to form part of your personal dental hygiene plan which aims to keep your teeth clean and healthy. These include:
\n
Scaling and Polishing: Scaling and Polishing are also known as dental cleaning. Dental cleanings involve removing disease-causing plaque and tartar (calculus) deposits that have built up on your teeth over time – especially in areas near the gum line that are hard to reach. Regular and professional scaling and polishing are vital to the health of your teeth.
\n
Pit and Fissure Sealants: Tooth decay occurs much faster in children than in adults. Sealants should be applied to a child’s teeth as soon as possible, before decay has had a chance to set in. These invisible plastic coatings fill the tiny grooves in the back teeth, so they do not become a breeding haven for bacteria. Decay will not start under a fissure sealant because the decay-causing organisms are deprived of the food and oxygen they need to flourish. The use of sealants substantially reduces the risk of tooth decay by keeping food and bacteria out of cavity prone areas.
\n
Fluoride Treatment: Treatment regimens with fluoride are developed for the prevention of dental caries. Your dentist can directly incorporate fluoride into your teeth s mineral structure, thereby making them decay-resistant and stronger. It can also reverse tiny cavities that are starting to form on your teeth. Fluoride is good for strengthening the teeth as well as providing essential minerals to any teeth that have been eroded by acid.
\n
Orthodontic Expansion: Growth or expansion appliances are used by nearly all dentists or orthodontists as they are often a better alternative to teeth extraction. The ideal time for expansion is while the maxillary canines are erupting. If we perform this procedure too early, it would most probably need to be repeated after these teeth erupt. Expansion is often a better alternative to teeth extraction.
\n\n
Your Role in Preventing Dental Disease:
The procedures mentioned above can only help you if you visit AKVS Dental Clinic to take advantage of them. By regular visits to our clinic, you can ensure healthy oral care, preventing problems from arising in the first place. However, effective prevention begins at home and we cannot stress enough the importance of maintaining a good oral hygiene routine for you and your family. Even after your regular visits to our clinic, daily flossing and brushing your teeth will go a long way towards keeping dental diseases away.
</string>
</resources>