<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
   >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="FAQs"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="35sp"
        android:gravity="center"
            ></TextView>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="What Are Wisdom Teeth?"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wisdom"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What’s The Best Way To Prevent Gum Disease?"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gum_disease"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="When a Tooth Is Knocked Out; How Soon Should You See A Dentist?
"            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/knocked"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Why Do I Need X-rays?"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xrays"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I Brush My Teeth, But Still Suffer From Bad Breath. What Can I Do?
"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brush"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I Suffer From Headaches; And My Partner Tells Me I Grind My Teeth. Is This Linked?"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/headache"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gum Disease and Diabetes… What Do I Need To Know?"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diabetes"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="When Should My Children Visit The Dentist For The First Time?
"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ftime"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            />







    </LinearLayout>
    </ScrollView>

</LinearLayout>
